# voxpery

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  package-lock.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: audit.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/server/: .dockerignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
apps/server/.cargo/: audit.toml
apps/server/migrations/: 001_initial.sql  002_friends.sql  003_dm.sql  004_dm_reads.sql  005_audit_log.sql  006_dm_privacy.sql  007_rename_admin_to_moderator.sql  008_google_oauth.sql  009_username_changed_at.sql  010_pinned_messages.sql  011_set_idle_status_to_online.sql  012_roles_and_permissions.sql  013_backfill_moderator_roles.sql  014_legacy_role_admin.sql  015_collapse_admin_to_member.sql  016_default_moderator_color.sql  017_password_reset_tokens.sql  018_update_default_moderator_permissions.sql  019_seed_everyone_role_and_assign_members.sql  020_channel_categories_and_overrides.sql  021_bans_and_webhooks.sql  022_channel_name_and_category_uniqueness.sql  023_category_override_fk_on_update_cascade.sql  024_grant_ban_to_moderator_roles.sql  025_remove_webhooks_feature.sql  026_message_reactions.sql  027_user_token_version.sql  028_status_offline_to_invisible.sql  029_uploaded_attachments.sql  030_server_reports.sql  031_channel_descriptions.sql
apps/server/src/: config.rs  errors.rs  lib.rs  main.rs
apps/server/src/middleware/: auth.rs
apps/server/src/models/: channel.rs  message.rs  mod.rs  server.rs  user.rs
apps/server/src/routes/: attachments.rs  auth.rs  channels.rs  dm.rs  friends.rs  messages.rs  mod.rs  servers.rs  webhooks.rs  webrtc.rs
apps/server/src/services/: attachments.rs  audit.rs  auth.rs  auth_test.rs  email.rs  jwt_blacklist.rs  mod.rs  permissions.rs  rate_limit.rs
apps/server/src/ws/: access.rs  handler.rs  mod.rs
apps/server/tests/: integration.rs
docs/: API.md  CHANGELOG.md  (+15 more)
(+118 files in other folders)
