[package]
name = "voxpery-desktop"
version = "0.1.0"
edition = "2021"
description = "Voxpery Desktop — Tauri-based desktop app"
license = "AGPL-3.0-only"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-http = "2"
tauri-plugin-secure-storage = "1"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
